--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ MRUItem0=/Game/MyContent/Maps/Main
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.09-15.00.01
+ElfBowling.TimeStamp=2018.12.09-15.16.34
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -733,6 +733,10 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/MyContent/Textures/T_ElfView.T_ElfView
+OpenAssetsAtExit=/Game/MyContent/Textures/M_ElfView.M_ElfView
+OpenAssetsAtExit=/Game/MyContent/Widgets/W_HUD.W_HUD
+OpenAssetsAtExit=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase.Bp_ElfBowlingGameModeBase
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -812,20 +816,23 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/Blueprints/Bp_PlayerPawn2
-MRUItem1=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
-MRUItem2=/Game/MyContent/Blueprints/BP_something
-MRUItem3=/Game/MyContent/Blueprints/Bp_PlayerPawn
-MRUItem4=/Game/MyContent/Meshes/SM_Marker
-MRUItem5=/Game/MyContent/Blueprints/Bp_BowlingBall
-MRUItem6=/Game/MyContent/Materials/M_LightBlue
-MRUItem7=/Game/MyContent/Materials/M_Red
-MRUItem8=/Game/MyContent/Materials/M_Grey
-MRUItem9=/Game/MyContent/Materials/M_Black
-MRUItem10=/Game/MyContent/Materials/M_White
-MRUItem11=/Game/Other/Elf/Wally
-MRUItem12=/Game/MyContent/Maps/Main
-MRUItem13=/Game/Other/Elf/M_Elf
+MRUItem0=/Game/MyContent/Materials/M_Black
+MRUItem1=/Game/MyContent/Textures/M_ElfView
+MRUItem2=/Game/MyContent/Textures/T_ElfView
+MRUItem3=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
+MRUItem4=/Game/MyContent/Widgets/W_HUD
+MRUItem5=/Game/MyContent/Blueprints/Bp_PlayerPawn2
+MRUItem6=/Game/MyContent/Blueprints/BP_something
+MRUItem7=/Game/MyContent/Blueprints/Bp_PlayerPawn
+MRUItem8=/Game/MyContent/Meshes/SM_Marker
+MRUItem9=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem10=/Game/MyContent/Materials/M_LightBlue
+MRUItem11=/Game/MyContent/Materials/M_Red
+MRUItem12=/Game/MyContent/Materials/M_Grey
+MRUItem13=/Game/MyContent/Materials/M_White
+MRUItem14=/Game/Other/Elf/Wally
+MRUItem15=/Game/MyContent/Maps/Main
+MRUItem16=/Game/Other/Elf/M_Elf
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1406,6 +1413,56 @@ REINST_Bp_PlayerPawn2_C_163.Rendering=True
 REINST_Bp_PlayerPawn2_C_163.Replication=True
 REINST_Bp_PlayerPawn2_C_163.Input=True
 REINST_Bp_PlayerPawn2_C_163.Actor=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Events=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+TextureRenderTarget2D.TextureRenderTarget2D=True
+TextureRenderTarget2D.TextureRenderTarget=True
+TextureRenderTarget2D.File Path=True
+TextureRenderTarget2D.LevelOfDetail=True
+SceneCapture2D.TransformCommon=True
+SceneCapture2D.Color Grading=True
+SceneCapture2D.Film=True
+SceneCapture2D.Mobile Tonemapper=True
+SceneCapture2D.Lens=True
+SceneCapture2D.Rendering Features=True
+SceneCapture2D.Projection=True
+SceneCapture2D.SceneCapture=True
+SceneCapture2D.PostProcessVolume=True
+SceneCapture2D.Rendering=True
+SceneCapture2D.Tags=True
+SceneCapture2D.Activation=True
+SceneCapture2D.Cooking=True
+SceneCapture2D.Input=True
+SceneCaptureComponent2D.TransformCommon=True
+SceneCaptureComponent2D.Color Grading=True
+SceneCaptureComponent2D.Film=True
+SceneCaptureComponent2D.Mobile Tonemapper=True
+SceneCaptureComponent2D.Lens=True
+SceneCaptureComponent2D.Rendering Features=True
+SceneCaptureComponent2D.Projection=True
+SceneCaptureComponent2D.SceneCapture=True
+SceneCaptureComponent2D.PostProcessVolume=True
+SceneCaptureComponent2D.Rendering=True
+SceneCaptureComponent2D.Tags=True
+SceneCaptureComponent2D.Activation=True
+SceneCaptureComponent2D.Cooking=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+Bp_ElfBowlingGameModeBase_C.HUD=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
@@ -1422,6 +1479,8 @@ REINST_Bp_PlayerPawn2_C_163.Actor=True
 /Game/MyContent/Blueprints/Bp_PlayerPawn.Bp_PlayerPawn=1
 /Game/MyContent/Blueprints/BP_something.BP_something=1
 /Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2=1
+/Game/MyContent/Widgets/W_HUD.W_HUD=1
+/Game/MyContent/Textures/T_ElfView.T_ElfView=1
 
 [MaterialEditor]
 PrimType=1
@@ -1462,6 +1521,7 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SceneCapture2D;
 RecentlyPlaced=/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2;
 RecentlyPlaced=/Game/MyContent/Blueprints/Bp_PlayerPawn.Bp_PlayerPawn;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -1480,12 +1540,25 @@ RecentlyPlaced=/Game/Other/Elf/Wally.Wally;
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_Sky_Sphere_C="\"Object.Override settings.Horizon color\" \"Object.Override settings.Cloud color\" \"Object.Override settings.Overall Color\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
-Object=
+Object="\"Object.Appearance.Brush\" "
+Image="\"Object.Appearance.Brush\" "
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Lists=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
@@ -1554,5 +1627,14 @@ LastLogListing=CompilerResultsLog
 [DetailCategoriesAdvanced]
 Brush.Geometry=False
 Brush.BrushSettings=True
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
 
 
