--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -733,10 +733,6 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyContent/Textures/T_ElfView.T_ElfView
-OpenAssetsAtExit=/Game/MyContent/Textures/M_ElfView.M_ElfView
-OpenAssetsAtExit=/Game/MyContent/Widgets/W_HUD.W_HUD
-OpenAssetsAtExit=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase.Bp_ElfBowlingGameModeBase
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1481,6 +1477,7 @@ Bp_ElfBowlingGameModeBase_C.HUD=True
 /Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2=1
 /Game/MyContent/Widgets/W_HUD.W_HUD=1
 /Game/MyContent/Textures/T_ElfView.T_ElfView=1
+/Game/MyContent/Textures/M_ElfView.M_ElfView=1
 
 [MaterialEditor]
 PrimType=1
