--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ MRUItem0=/Game/MyContent/Maps/Main
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.09-16.25.41
+ElfBowling.TimeStamp=2018.12.10-02.35.12
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -812,23 +812,24 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/Materials/M_Black
-MRUItem1=/Game/MyContent/Textures/M_ElfView
-MRUItem2=/Game/MyContent/Textures/T_ElfView
-MRUItem3=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
-MRUItem4=/Game/MyContent/Widgets/W_HUD
-MRUItem5=/Game/MyContent/Blueprints/Bp_PlayerPawn2
-MRUItem6=/Game/MyContent/Blueprints/BP_something
-MRUItem7=/Game/MyContent/Blueprints/Bp_PlayerPawn
-MRUItem8=/Game/MyContent/Meshes/SM_Marker
-MRUItem9=/Game/MyContent/Blueprints/Bp_BowlingBall
-MRUItem10=/Game/MyContent/Materials/M_LightBlue
-MRUItem11=/Game/MyContent/Materials/M_Red
-MRUItem12=/Game/MyContent/Materials/M_Grey
-MRUItem13=/Game/MyContent/Materials/M_White
-MRUItem14=/Game/Other/Elf/Wally
-MRUItem15=/Game/MyContent/Maps/Main
-MRUItem16=/Game/Other/Elf/M_Elf
+MRUItem0=/Game/MyContent/Blueprints/Bp_Elf
+MRUItem1=/Game/MyContent/Materials/M_Black
+MRUItem2=/Game/MyContent/Textures/M_ElfView
+MRUItem3=/Game/MyContent/Textures/T_ElfView
+MRUItem4=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
+MRUItem5=/Game/MyContent/Widgets/W_HUD
+MRUItem6=/Game/MyContent/Blueprints/Bp_PlayerPawn2
+MRUItem7=/Game/MyContent/Blueprints/BP_something
+MRUItem8=/Game/MyContent/Blueprints/Bp_PlayerPawn
+MRUItem9=/Game/MyContent/Meshes/SM_Marker
+MRUItem10=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem11=/Game/MyContent/Materials/M_LightBlue
+MRUItem12=/Game/MyContent/Materials/M_Red
+MRUItem13=/Game/MyContent/Materials/M_Grey
+MRUItem14=/Game/MyContent/Materials/M_White
+MRUItem15=/Game/Other/Elf/Wally
+MRUItem16=/Game/MyContent/Maps/Main
+MRUItem17=/Game/Other/Elf/M_Elf
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1459,6 +1460,53 @@ CanvasPanel.Performance=True
 CanvasPanel.Clipping=True
 CanvasPanel.Navigation=True
 Bp_ElfBowlingGameModeBase_C.HUD=True
+Bp_Elf_C.Tick=True
+Bp_Elf_C.Rendering=True
+Bp_Elf_C.Replication=True
+Bp_Elf_C.Input=True
+Bp_Elf_C.Actor=True
+Bp_Elf_C.Variable=True
+Bp_Elf_C.TransformCommon=True
+Bp_Elf_C.Sockets=True
+Bp_Elf_C.StaticMesh=True
+Bp_Elf_C.Physics=True
+Bp_Elf_C.Collision=True
+Bp_Elf_C.Lighting=True
+Bp_Elf_C.Tags=True
+Bp_Elf_C.ComponentReplication=True
+Bp_Elf_C.Cooking=True
+Bp_Elf_C.Events=True
+Bp_Elf_C.Materials=True
+REINST_Bp_Elf_C_34.Variable=True
+REINST_Bp_Elf_C_34.TransformCommon=True
+REINST_Bp_Elf_C_34.Sockets=True
+REINST_Bp_Elf_C_34.StaticMesh=True
+REINST_Bp_Elf_C_34.Materials=True
+REINST_Bp_Elf_C_34.Physics=True
+REINST_Bp_Elf_C_34.Collision=True
+REINST_Bp_Elf_C_34.Lighting=True
+REINST_Bp_Elf_C_34.Rendering=True
+REINST_Bp_Elf_C_34.Tags=True
+REINST_Bp_Elf_C_34.ComponentReplication=True
+REINST_Bp_Elf_C_34.Cooking=True
+REINST_Bp_Elf_C_34.Events=True
+REINST_Bp_Elf_C_38.Variable=True
+REINST_Bp_Elf_C_38.TransformCommon=True
+REINST_Bp_Elf_C_38.Sockets=True
+REINST_Bp_Elf_C_38.StaticMesh=True
+REINST_Bp_Elf_C_38.Materials=True
+REINST_Bp_Elf_C_38.Physics=True
+REINST_Bp_Elf_C_38.Collision=True
+REINST_Bp_Elf_C_38.Lighting=True
+REINST_Bp_Elf_C_38.Rendering=True
+REINST_Bp_Elf_C_38.Tags=True
+REINST_Bp_Elf_C_38.ComponentReplication=True
+REINST_Bp_Elf_C_38.Cooking=True
+REINST_Bp_Elf_C_38.Events=True
+ElfController.Rendering=True
+ElfController.Input=True
+ElfController.Actor=True
+ElfController.Elf=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
@@ -1478,6 +1526,7 @@ Bp_ElfBowlingGameModeBase_C.HUD=True
 /Game/MyContent/Widgets/W_HUD.W_HUD=1
 /Game/MyContent/Textures/T_ElfView.T_ElfView=1
 /Game/MyContent/Textures/M_ElfView.M_ElfView=1
+/Game/MyContent/Blueprints/Bp_Elf.Bp_Elf=1
 
 [MaterialEditor]
 PrimType=1
@@ -1518,6 +1567,8 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [PlacementMode]
+RecentlyPlaced=/Script/ElfBowling.ElfController;
+RecentlyPlaced=/Game/MyContent/Blueprints/Bp_Elf.Bp_Elf;
 RecentlyPlaced=/Script/Engine.SceneCapture2D;
 RecentlyPlaced=/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2;
 RecentlyPlaced=/Game/MyContent/Blueprints/Bp_PlayerPawn.Bp_PlayerPawn;
@@ -1537,7 +1588,7 @@ RecentlyPlaced=/Game/Other/Elf/Wally.Wally;
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_Sky_Sphere_C="\"Object.Override settings.Horizon color\" \"Object.Override settings.Cloud color\" \"Object.Override settings.Overall Color\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
-Object="\"Object.Appearance.Brush\" "
+Object=
 Image="\"Object.Appearance.Brush\" "
 Widget="\"Object.Appearance.Brush\" "
 Visual="\"Object.Appearance.Brush\" "
