--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ MRUItem0=/Game/MyContent/Maps/Main
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.10-03.21.25
+ElfBowling.TimeStamp=2018.12.10-03.48.06
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -733,6 +733,8 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/MyContent/Blueprints/Bp_BowlingBall.Bp_BowlingBall
+OpenAssetsAtExit=/Game/MyContent/Blueprints/Bp_Elf.Bp_Elf
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -813,16 +815,16 @@ bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MyContent/Blueprints/Bp_Elf
-MRUItem1=/Game/MyContent/Materials/M_Black
-MRUItem2=/Game/MyContent/Textures/M_ElfView
-MRUItem3=/Game/MyContent/Textures/T_ElfView
-MRUItem4=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
-MRUItem5=/Game/MyContent/Widgets/W_HUD
-MRUItem6=/Game/MyContent/Blueprints/Bp_PlayerPawn2
-MRUItem7=/Game/MyContent/Blueprints/BP_something
-MRUItem8=/Game/MyContent/Blueprints/Bp_PlayerPawn
-MRUItem9=/Game/MyContent/Meshes/SM_Marker
-MRUItem10=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem1=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem2=/Game/MyContent/Materials/M_Black
+MRUItem3=/Game/MyContent/Textures/M_ElfView
+MRUItem4=/Game/MyContent/Textures/T_ElfView
+MRUItem5=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
+MRUItem6=/Game/MyContent/Widgets/W_HUD
+MRUItem7=/Game/MyContent/Blueprints/Bp_PlayerPawn2
+MRUItem8=/Game/MyContent/Blueprints/BP_something
+MRUItem9=/Game/MyContent/Blueprints/Bp_PlayerPawn
+MRUItem10=/Game/MyContent/Meshes/SM_Marker
 MRUItem11=/Game/MyContent/Materials/M_LightBlue
 MRUItem12=/Game/MyContent/Materials/M_Red
 MRUItem13=/Game/MyContent/Materials/M_Grey
@@ -1507,6 +1509,107 @@ ElfController.Rendering=True
 ElfController.Input=True
 ElfController.Actor=True
 ElfController.Elf=True
+Bp_Elf_C.ComponentTick=True
+Bp_BowlingBall_C.ComponentTick=True
+Bp_BowlingBall_C.Projectile=True
+Bp_BowlingBall_C.ProjectileBounces=True
+Bp_BowlingBall_C.ProjectileSimulation=True
+Bp_BowlingBall_C.Homing=True
+Bp_BowlingBall_C.Velocity=True
+Bp_BowlingBall_C.PlanarMovement=True
+Bp_BowlingBall_C.MovementComponent=True
+Bp_BowlingBall_C.Activation=True
+REINST_Bp_Elf_C_94.Variable=True
+REINST_Bp_Elf_C_94.TransformCommon=True
+REINST_Bp_Elf_C_94.Sockets=True
+REINST_Bp_Elf_C_94.StaticMesh=True
+REINST_Bp_Elf_C_94.Materials=True
+REINST_Bp_Elf_C_94.Physics=True
+REINST_Bp_Elf_C_94.Collision=True
+REINST_Bp_Elf_C_94.Lighting=True
+REINST_Bp_Elf_C_94.Rendering=True
+REINST_Bp_Elf_C_94.Tags=True
+REINST_Bp_Elf_C_94.ComponentReplication=True
+REINST_Bp_Elf_C_94.Cooking=True
+REINST_Bp_Elf_C_94.Events=True
+REINST_Bp_BowlingBall_C_86.Variable=True
+REINST_Bp_BowlingBall_C_86.TransformCommon=True
+REINST_Bp_BowlingBall_C_86.Sockets=True
+REINST_Bp_BowlingBall_C_86.StaticMesh=True
+REINST_Bp_BowlingBall_C_86.Materials=True
+REINST_Bp_BowlingBall_C_86.Physics=True
+REINST_Bp_BowlingBall_C_86.Collision=True
+REINST_Bp_BowlingBall_C_86.Lighting=True
+REINST_Bp_BowlingBall_C_86.Rendering=True
+REINST_Bp_BowlingBall_C_86.Tags=True
+REINST_Bp_BowlingBall_C_86.ComponentReplication=True
+REINST_Bp_BowlingBall_C_86.Cooking=True
+REINST_Bp_BowlingBall_C_86.Events=True
+REINST_Bp_BowlingBall_C_106.Variable=True
+REINST_Bp_BowlingBall_C_106.TransformCommon=True
+REINST_Bp_BowlingBall_C_106.Sockets=True
+REINST_Bp_BowlingBall_C_106.StaticMesh=True
+REINST_Bp_BowlingBall_C_106.Materials=True
+REINST_Bp_BowlingBall_C_106.Physics=True
+REINST_Bp_BowlingBall_C_106.Collision=True
+REINST_Bp_BowlingBall_C_106.Lighting=True
+REINST_Bp_BowlingBall_C_106.Rendering=True
+REINST_Bp_BowlingBall_C_106.Tags=True
+REINST_Bp_BowlingBall_C_106.ComponentReplication=True
+REINST_Bp_BowlingBall_C_106.Cooking=True
+REINST_Bp_BowlingBall_C_106.Events=True
+REINST_Bp_Elf_C_102.Variable=True
+REINST_Bp_Elf_C_102.TransformCommon=True
+REINST_Bp_Elf_C_102.Sockets=True
+REINST_Bp_Elf_C_102.StaticMesh=True
+REINST_Bp_Elf_C_102.Materials=True
+REINST_Bp_Elf_C_102.Physics=True
+REINST_Bp_Elf_C_102.Collision=True
+REINST_Bp_Elf_C_102.Lighting=True
+REINST_Bp_Elf_C_102.Rendering=True
+REINST_Bp_Elf_C_102.Tags=True
+REINST_Bp_Elf_C_102.ComponentReplication=True
+REINST_Bp_Elf_C_102.Cooking=True
+REINST_Bp_Elf_C_102.Events=True
+REINST_Bp_Elf_C_114.Variable=True
+REINST_Bp_Elf_C_114.TransformCommon=True
+REINST_Bp_Elf_C_114.Sockets=True
+REINST_Bp_Elf_C_114.StaticMesh=True
+REINST_Bp_Elf_C_114.Materials=True
+REINST_Bp_Elf_C_114.Physics=True
+REINST_Bp_Elf_C_114.Collision=True
+REINST_Bp_Elf_C_114.Lighting=True
+REINST_Bp_Elf_C_114.Rendering=True
+REINST_Bp_Elf_C_114.Tags=True
+REINST_Bp_Elf_C_114.ComponentReplication=True
+REINST_Bp_Elf_C_114.Cooking=True
+REINST_Bp_Elf_C_114.Events=True
+REINST_Bp_Elf_C_126.Variable=True
+REINST_Bp_Elf_C_126.TransformCommon=True
+REINST_Bp_Elf_C_126.Sockets=True
+REINST_Bp_Elf_C_126.StaticMesh=True
+REINST_Bp_Elf_C_126.Materials=True
+REINST_Bp_Elf_C_126.Physics=True
+REINST_Bp_Elf_C_126.Collision=True
+REINST_Bp_Elf_C_126.Lighting=True
+REINST_Bp_Elf_C_126.Rendering=True
+REINST_Bp_Elf_C_126.Tags=True
+REINST_Bp_Elf_C_126.ComponentReplication=True
+REINST_Bp_Elf_C_126.Cooking=True
+REINST_Bp_Elf_C_126.Events=True
+REINST_Bp_BowlingBall_C_110.Variable=True
+REINST_Bp_BowlingBall_C_110.TransformCommon=True
+REINST_Bp_BowlingBall_C_110.Sockets=True
+REINST_Bp_BowlingBall_C_110.StaticMesh=True
+REINST_Bp_BowlingBall_C_110.Materials=True
+REINST_Bp_BowlingBall_C_110.Physics=True
+REINST_Bp_BowlingBall_C_110.Collision=True
+REINST_Bp_BowlingBall_C_110.Lighting=True
+REINST_Bp_BowlingBall_C_110.Rendering=True
+REINST_Bp_BowlingBall_C_110.Tags=True
+REINST_Bp_BowlingBall_C_110.ComponentReplication=True
+REINST_Bp_BowlingBall_C_110.Cooking=True
+REINST_Bp_BowlingBall_C_110.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
