--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,7 +106,7 @@ MRUItem0=/Game/MyContent/Maps/Main
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.10-03.48.06
+ElfBowling.TimeStamp=2018.12.10-04.31.02
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -814,13 +814,13 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/Blueprints/Bp_Elf
-MRUItem1=/Game/MyContent/Blueprints/Bp_BowlingBall
-MRUItem2=/Game/MyContent/Materials/M_Black
-MRUItem3=/Game/MyContent/Textures/M_ElfView
-MRUItem4=/Game/MyContent/Textures/T_ElfView
-MRUItem5=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
-MRUItem6=/Game/MyContent/Widgets/W_HUD
+MRUItem0=/Game/MyContent/Widgets/W_HUD
+MRUItem1=/Game/MyContent/Blueprints/Bp_Elf
+MRUItem2=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem3=/Game/MyContent/Materials/M_Black
+MRUItem4=/Game/MyContent/Textures/M_ElfView
+MRUItem5=/Game/MyContent/Textures/T_ElfView
+MRUItem6=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
 MRUItem7=/Game/MyContent/Blueprints/Bp_PlayerPawn2
 MRUItem8=/Game/MyContent/Blueprints/BP_something
 MRUItem9=/Game/MyContent/Blueprints/Bp_PlayerPawn
@@ -1610,6 +1610,24 @@ REINST_Bp_BowlingBall_C_110.Tags=True
 REINST_Bp_BowlingBall_C_110.ComponentReplication=True
 REINST_Bp_BowlingBall_C_110.Cooking=True
 REINST_Bp_BowlingBall_C_110.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+DestroyBall.BuildingManager=True
+DestroyBall.ElfController=True
+DestroyBall.PlayerPawn=True
+PlayerController.TransformCommon=True
+PlayerController.PlayerController=True
+PlayerController.MouseInterface=True
+PlayerController.Game=True
+PlayerController.Input=True
+PlayerController.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
