--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,7 +107,7 @@ MRUItem0=/Game/MyContent/Maps/Main
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.10-11.41.44
+ElfBowling.TimeStamp=2018.12.10-11.55.38
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -734,7 +734,7 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyContent/Blueprints/Bp_BowlingBall.Bp_BowlingBall
+OpenAssetsAtExit=/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -814,26 +814,26 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Other/Sounds/334223__jradcoolness__marble-rolling
-MRUItem1=/Game/MyContent/Blueprints/Bp_BowlingBall
-MRUItem2=/Game/MyContent/Sound/RollingSound
-MRUItem3=/Game/MyContent/Widgets/W_HUD
-MRUItem4=/Game/MyContent/Meshes/SM_Marker
-MRUItem5=/Game/MyContent/Blueprints/Bp_Elf
-MRUItem6=/Game/MyContent/Materials/M_Black
-MRUItem7=/Game/MyContent/Textures/M_ElfView
-MRUItem8=/Game/MyContent/Textures/T_ElfView
-MRUItem9=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
-MRUItem10=/Game/MyContent/Blueprints/Bp_PlayerPawn2
-MRUItem11=/Game/MyContent/Blueprints/BP_something
-MRUItem12=/Game/MyContent/Blueprints/Bp_PlayerPawn
-MRUItem13=/Game/MyContent/Materials/M_LightBlue
-MRUItem14=/Game/MyContent/Materials/M_Red
-MRUItem15=/Game/MyContent/Materials/M_Grey
-MRUItem16=/Game/MyContent/Materials/M_White
-MRUItem17=/Game/Other/Elf/Wally
-MRUItem18=/Game/MyContent/Maps/Main
-MRUItem19=/Game/Other/Elf/M_Elf
+MRUItem0=/Game/MyContent/Blueprints/Bp_PlayerPawn2
+MRUItem1=/Game/MyContent/Blueprints/Bp_PlayerPawn
+MRUItem2=/Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice
+MRUItem3=/Game/Other/Sounds/334223__jradcoolness__marble-rolling
+MRUItem4=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem5=/Game/MyContent/Sound/RollingSound
+MRUItem6=/Game/MyContent/Widgets/W_HUD
+MRUItem7=/Game/MyContent/Meshes/SM_Marker
+MRUItem8=/Game/MyContent/Blueprints/Bp_Elf
+MRUItem9=/Game/MyContent/Materials/M_Black
+MRUItem10=/Game/MyContent/Textures/M_ElfView
+MRUItem11=/Game/MyContent/Textures/T_ElfView
+MRUItem12=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
+MRUItem13=/Game/MyContent/Blueprints/BP_something
+MRUItem14=/Game/MyContent/Materials/M_LightBlue
+MRUItem15=/Game/MyContent/Materials/M_Red
+MRUItem16=/Game/MyContent/Materials/M_Grey
+MRUItem17=/Game/MyContent/Materials/M_White
+MRUItem18=/Game/Other/Elf/Wally
+MRUItem19=/Game/MyContent/Maps/Main
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1687,6 +1687,24 @@ REINST_Bp_BowlingBall_C_68.AttenuationSpatialization=True
 REINST_Bp_BowlingBall_C_68.AttenuationAirAbsorption=True
 REINST_Bp_BowlingBall_C_68.AttenuationListenerFocus=True
 REINST_Bp_BowlingBall_C_68.AttenuationOcclusion=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
+Bp_PlayerPawn2_C.Gameplay=True
+Bp_PlayerPawn2_C.ElfController=True
+Bp_PlayerPawn_C.Gameplay=True
+Bp_PlayerPawn_C.ElfController=True
+Bp_PlayerPawn_C.PlayerPawn=True
+REINST_Bp_PlayerPawn2_C_106.Projectile=True
+REINST_Bp_PlayerPawn2_C_106.Tick=True
+REINST_Bp_PlayerPawn2_C_106.Gameplay=True
+REINST_Bp_PlayerPawn2_C_106.ElfController=True
+REINST_Bp_PlayerPawn2_C_106.PlayerPawn=True
+REINST_Bp_PlayerPawn2_C_106.Pawn=True
+REINST_Bp_PlayerPawn2_C_106.Camera=True
+REINST_Bp_PlayerPawn2_C_106.Rendering=True
+REINST_Bp_PlayerPawn2_C_106.Replication=True
+REINST_Bp_PlayerPawn2_C_106.Input=True
+REINST_Bp_PlayerPawn2_C_106.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
@@ -1697,18 +1715,19 @@ REINST_Bp_BowlingBall_C_68.AttenuationOcclusion=True
 /Game/MyContent/Materials/M_Grey.M_Grey=1
 /Game/MyContent/Materials/M_Red.M_Red=1
 /Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase.Bp_ElfBowlingGameModeBase=1
-/Game/MyContent/Blueprints/Bp_BowlingBall.Bp_BowlingBall=1
+/Game/MyContent/Blueprints/Bp_BowlingBall.Bp_BowlingBall=0
 /Game/MyContent/Meshes/SM_Marker.SM_Marker=1
 /Game/MyContent/Maps/Main.Main:PersistentLevel.Main=1
 /Game/MyContent/Blueprints/Bp_PlayerPawn.Bp_PlayerPawn=1
 /Game/MyContent/Blueprints/BP_something.BP_something=1
-/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2=1
+/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2=0
 /Game/MyContent/Widgets/W_HUD.W_HUD=1
 /Game/MyContent/Textures/T_ElfView.T_ElfView=1
 /Game/MyContent/Textures/M_ElfView.M_ElfView=1
 /Game/MyContent/Blueprints/Bp_Elf.Bp_Elf=1
 /Game/Other/Sounds/334223__jradcoolness__marble-rolling.334223__jradcoolness__marble-rolling=0
 /Game/MyContent/Sound/RollingSound.RollingSound=0
+/Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice.Dee_Yan-Key_-_05_-_Santa_on_the_Ice=0
 
 [MaterialEditor]
 PrimType=1
