--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -731,10 +731,14 @@ Voice.TimeStamp=2018.09.24-23.21.36
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2018.09.24-23.21.22
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.09.24-23.21.04
+BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.09.24-23.21.29
+SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2
+OpenAssetsAtExit=/Game/MyContent/Particles/M_Snow.M_Snow
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -752,7 +756,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/ElfBowling
+ContentBrowserTab1.SelectedPaths=/Game/MyContent/Particles
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -814,26 +818,26 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/Blueprints/Bp_PlayerPawn2
-MRUItem1=/Game/MyContent/Blueprints/Bp_PlayerPawn
-MRUItem2=/Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice
-MRUItem3=/Game/Other/Sounds/334223__jradcoolness__marble-rolling
-MRUItem4=/Game/MyContent/Blueprints/Bp_BowlingBall
-MRUItem5=/Game/MyContent/Sound/RollingSound
-MRUItem6=/Game/MyContent/Widgets/W_HUD
-MRUItem7=/Game/MyContent/Meshes/SM_Marker
-MRUItem8=/Game/MyContent/Blueprints/Bp_Elf
-MRUItem9=/Game/MyContent/Materials/M_Black
-MRUItem10=/Game/MyContent/Textures/M_ElfView
-MRUItem11=/Game/MyContent/Textures/T_ElfView
-MRUItem12=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
-MRUItem13=/Game/MyContent/Blueprints/BP_something
-MRUItem14=/Game/MyContent/Materials/M_LightBlue
-MRUItem15=/Game/MyContent/Materials/M_Red
-MRUItem16=/Game/MyContent/Materials/M_Grey
-MRUItem17=/Game/MyContent/Materials/M_White
-MRUItem18=/Game/Other/Elf/Wally
-MRUItem19=/Game/MyContent/Maps/Main
+MRUItem0=/Game/MyContent/Particles/P_Snow
+MRUItem1=/Game/MyContent/Particles/M_Snow
+MRUItem2=/Game/MyContent/Blueprints/Bp_PlayerPawn2
+MRUItem3=/Game/MyContent/Blueprints/Bp_PlayerPawn
+MRUItem4=/Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice
+MRUItem5=/Game/Other/Sounds/334223__jradcoolness__marble-rolling
+MRUItem6=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem7=/Game/MyContent/Sound/RollingSound
+MRUItem8=/Game/MyContent/Widgets/W_HUD
+MRUItem9=/Game/MyContent/Meshes/SM_Marker
+MRUItem10=/Game/MyContent/Blueprints/Bp_Elf
+MRUItem11=/Game/MyContent/Materials/M_Black
+MRUItem12=/Game/MyContent/Textures/M_ElfView
+MRUItem13=/Game/MyContent/Textures/T_ElfView
+MRUItem14=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
+MRUItem15=/Game/MyContent/Blueprints/BP_something
+MRUItem16=/Game/MyContent/Materials/M_LightBlue
+MRUItem17=/Game/MyContent/Materials/M_Red
+MRUItem18=/Game/MyContent/Materials/M_Grey
+MRUItem19=/Game/MyContent/Materials/M_White
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1705,6 +1709,50 @@ REINST_Bp_PlayerPawn2_C_106.Rendering=True
 REINST_Bp_PlayerPawn2_C_106.Replication=True
 REINST_Bp_PlayerPawn2_C_106.Input=True
 REINST_Bp_PlayerPawn2_C_106.Actor=True
+MatineeActor.TransformCommon=True
+MatineeActor.MatineeActor=True
+MatineeActor.Play=True
+MatineeActor.Rewind=True
+MatineeActor.Cinematic=True
+MatineeActor.Rendering=True
+MatineeActor.Actor=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Actor=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
@@ -1728,6 +1776,8 @@ REINST_Bp_PlayerPawn2_C_106.Actor=True
 /Game/Other/Sounds/334223__jradcoolness__marble-rolling.334223__jradcoolness__marble-rolling=0
 /Game/MyContent/Sound/RollingSound.RollingSound=0
 /Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice.Dee_Yan-Key_-_05_-_Santa_on_the_Ice=0
+/Game/MyContent/Particles/M_Snow.M_Snow=1
+/Game/MyContent/Particles/P_Snow.P_Snow=1
 
 [MaterialEditor]
 PrimType=1
@@ -1768,6 +1818,9 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/MyContent/Particles/P_Snow.P_Snow;
+RecentlyPlaced=/Game/MyContent/Particles/M_Snow.M_Snow;
+RecentlyPlaced=/Script/Engine.MatineeActor;/Engine/Transient.ActorFactoryMatineeActor_0
 RecentlyPlaced=/Game/MyContent/Blueprints/Bp_BowlingBall.Bp_BowlingBall;
 RecentlyPlaced=/Game/MyContent/Blueprints/Bp_Elf.Bp_Elf;
 RecentlyPlaced=/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2;
@@ -1889,5 +1942,38 @@ bIsInPortraitMode=False
 ProfileName=
 ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=False
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 
