--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,6 +102,7 @@ CurrentPosGridSize=1
 
 [MRU]
 MRUItem0=/Game/MyContent/Maps/Main
+MRUItem1=/Game/MyContent/Maps/Menu
 
 [EditorStartup]
 LastLevel=/Game/MyContent/Maps/Main
@@ -739,6 +740,8 @@ SequencerWidgets.LastCompileMethod=Unknown
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/MyContent/Particles/M_Snow.M_Snow
+OpenAssetsAtExit=/Game/MyContent/Widgets/W_Menu.W_Menu
+OpenAssetsAtExit=/Game/MyContent/Widgets/W_Win.W_Win
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -818,26 +821,26 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/Particles/P_Snow
-MRUItem1=/Game/MyContent/Particles/M_Snow
-MRUItem2=/Game/MyContent/Blueprints/Bp_PlayerPawn2
-MRUItem3=/Game/MyContent/Blueprints/Bp_PlayerPawn
-MRUItem4=/Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice
-MRUItem5=/Game/Other/Sounds/334223__jradcoolness__marble-rolling
-MRUItem6=/Game/MyContent/Blueprints/Bp_BowlingBall
-MRUItem7=/Game/MyContent/Sound/RollingSound
-MRUItem8=/Game/MyContent/Widgets/W_HUD
-MRUItem9=/Game/MyContent/Meshes/SM_Marker
-MRUItem10=/Game/MyContent/Blueprints/Bp_Elf
-MRUItem11=/Game/MyContent/Materials/M_Black
-MRUItem12=/Game/MyContent/Textures/M_ElfView
-MRUItem13=/Game/MyContent/Textures/T_ElfView
-MRUItem14=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
-MRUItem15=/Game/MyContent/Blueprints/BP_something
-MRUItem16=/Game/MyContent/Materials/M_LightBlue
-MRUItem17=/Game/MyContent/Materials/M_Red
-MRUItem18=/Game/MyContent/Materials/M_Grey
-MRUItem19=/Game/MyContent/Materials/M_White
+MRUItem0=/Game/MyContent/Maps/Main
+MRUItem1=/Game/MyContent/Widgets/W_Win
+MRUItem2=/Game/MyContent/Widgets/W_Menu
+MRUItem3=/Game/MyContent/Maps/Menu
+MRUItem4=/Game/MyContent/Particles/P_Snow
+MRUItem5=/Game/MyContent/Particles/M_Snow
+MRUItem6=/Game/MyContent/Blueprints/Bp_PlayerPawn2
+MRUItem7=/Game/MyContent/Blueprints/Bp_PlayerPawn
+MRUItem8=/Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice
+MRUItem9=/Game/Other/Sounds/334223__jradcoolness__marble-rolling
+MRUItem10=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem11=/Game/MyContent/Sound/RollingSound
+MRUItem12=/Game/MyContent/Widgets/W_HUD
+MRUItem13=/Game/MyContent/Meshes/SM_Marker
+MRUItem14=/Game/MyContent/Blueprints/Bp_Elf
+MRUItem15=/Game/MyContent/Materials/M_Black
+MRUItem16=/Game/MyContent/Textures/M_ElfView
+MRUItem17=/Game/MyContent/Textures/T_ElfView
+MRUItem18=/Game/MyContent/Blueprints/Bp_ElfBowlingGameModeBase
+MRUItem19=/Game/MyContent/Blueprints/BP_something
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1753,6 +1756,30 @@ ParticleModuleRequired.Materials=True
 ParticleSpriteEmitter.Particle=True
 ParticleSpriteEmitter.Cascade=True
 ParticleSpriteEmitter.Significance=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+WorldSettings.Broadphase=True
+Menu_C.Tick=True
+Menu_C.Replication=True
+Menu_C.Input=True
+Menu_C.Actor=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
@@ -1778,6 +1805,7 @@ ParticleSpriteEmitter.Significance=True
 /Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice.Dee_Yan-Key_-_05_-_Santa_on_the_Ice=0
 /Game/MyContent/Particles/M_Snow.M_Snow=1
 /Game/MyContent/Particles/P_Snow.P_Snow=1
+/Game/MyContent/Maps/Menu.Menu:PersistentLevel.Menu=0
 
 [MaterialEditor]
 PrimType=1
@@ -1842,14 +1870,19 @@ RecentlyPlaced=/Game/Other/Elf/Wally.Wally;
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_Sky_Sphere_C="\"Object.Override settings.Horizon color\" \"Object.Override settings.Cloud color\" \"Object.Override settings.Overall Color\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
-Object=
-Image="\"Object.Appearance.Brush\" "
-Widget=
-Visual=
+Object="\"Object.Appearance.ColorAndOpacity\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" "
 Bp_BowlingBall_C="\"Object.Sound.Roll\" \"Object.Sound.Roll.Object.Sound\" \"Object.Sound.Roll.Object.Attenuation\" "
 BowlingBall="\"Object.Sound.Roll\" \"Object.Sound.Roll.Object.Sound\" \"Object.Sound.Roll.Object.Attenuation\" "
 REINST_Bp_BowlingBall_C_52="\"Object.Sound.Roll\" \"Object.Sound.Roll.Object.Sound\" "
 REINST_Bp_BowlingBall_C_68="\"Object.Sound.Roll\" \"Object.Sound.Roll.Object.Sound\" \"Object.Sound.Roll.Object.Attenuation\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+Button="\"Object.Appearance.ColorAndOpacity\" "
+ContentWidget="\"Object.Appearance.ColorAndOpacity\" "
+PanelWidget="\"Object.Appearance.ColorAndOpacity\" "
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1865,6 +1898,7 @@ Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
+User Created=False
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.Move,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Rotate,InputSettings.Bindings.ActionMappings.Launch,InputSettings.Bindings.ActionMappings,
