--- a/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ElfBowling/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,7 +108,7 @@ MRUItem1=/Game/MyContent/Maps/Menu
 LastLevel=/Game/MyContent/Maps/Main
 
 [ModuleFileTracking]
-ElfBowling.TimeStamp=2018.12.10-11.55.38
+ElfBowling.TimeStamp=2018.12.10-13.07.23
 ElfBowling.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.09.24-23.21.24
 PakFile.LastCompileMethod=Unknown
@@ -739,7 +739,8 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyContent/Particles/M_Snow.M_Snow
+OpenAssetsAtExit=/Game/MyContent/Blueprints/Bp_PlayerPawn2.Bp_PlayerPawn2
+OpenAssetsAtExit=/Game/MyContent/Widgets/W_HUD.W_HUD
 OpenAssetsAtExit=/Game/MyContent/Widgets/W_Menu.W_Menu
 OpenAssetsAtExit=/Game/MyContent/Widgets/W_Win.W_Win
 
@@ -821,19 +822,19 @@ bSCCUseGlobalSettings=False
 bUseUnsortedMenus=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/Maps/Main
-MRUItem1=/Game/MyContent/Widgets/W_Win
-MRUItem2=/Game/MyContent/Widgets/W_Menu
-MRUItem3=/Game/MyContent/Maps/Menu
-MRUItem4=/Game/MyContent/Particles/P_Snow
-MRUItem5=/Game/MyContent/Particles/M_Snow
-MRUItem6=/Game/MyContent/Blueprints/Bp_PlayerPawn2
-MRUItem7=/Game/MyContent/Blueprints/Bp_PlayerPawn
-MRUItem8=/Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice
-MRUItem9=/Game/Other/Sounds/334223__jradcoolness__marble-rolling
-MRUItem10=/Game/MyContent/Blueprints/Bp_BowlingBall
-MRUItem11=/Game/MyContent/Sound/RollingSound
-MRUItem12=/Game/MyContent/Widgets/W_HUD
+MRUItem0=/Game/MyContent/Widgets/W_HUD
+MRUItem1=/Game/MyContent/Blueprints/Bp_PlayerPawn2
+MRUItem2=/Game/MyContent/Maps/Main
+MRUItem3=/Game/MyContent/Widgets/W_Win
+MRUItem4=/Game/MyContent/Widgets/W_Menu
+MRUItem5=/Game/MyContent/Maps/Menu
+MRUItem6=/Game/MyContent/Particles/P_Snow
+MRUItem7=/Game/MyContent/Particles/M_Snow
+MRUItem8=/Game/MyContent/Blueprints/Bp_PlayerPawn
+MRUItem9=/Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice
+MRUItem10=/Game/Other/Sounds/334223__jradcoolness__marble-rolling
+MRUItem11=/Game/MyContent/Blueprints/Bp_BowlingBall
+MRUItem12=/Game/MyContent/Sound/RollingSound
 MRUItem13=/Game/MyContent/Meshes/SM_Marker
 MRUItem14=/Game/MyContent/Blueprints/Bp_Elf
 MRUItem15=/Game/MyContent/Materials/M_Black
@@ -1780,6 +1781,9 @@ Button.Performance=True
 Button.Clipping=True
 Button.Navigation=True
 Button.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Other/Elf/M_Elf.M_Elf=1
@@ -1803,7 +1807,7 @@ Button.Events=True
 /Game/Other/Sounds/334223__jradcoolness__marble-rolling.334223__jradcoolness__marble-rolling=0
 /Game/MyContent/Sound/RollingSound.RollingSound=0
 /Game/Other/Sounds/Dee_Yan-Key_-_05_-_Santa_on_the_Ice.Dee_Yan-Key_-_05_-_Santa_on_the_Ice=0
-/Game/MyContent/Particles/M_Snow.M_Snow=1
+/Game/MyContent/Particles/M_Snow.M_Snow=0
 /Game/MyContent/Particles/P_Snow.P_Snow=1
 /Game/MyContent/Maps/Menu.Menu:PersistentLevel.Menu=0
 
